Put all of the rshell.cpp code into the .h file and fixed up the makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,16 +1,12 @@
 #Variables
 COMPILE = g++
 FLAGS = -Wall -Werror -ansi -pedantic
-OBJS = rshell.o
 
-#Targets
+all: rshell
 
-all: main.cpp $(OBJS)
-	$(COMPILE) $(FLAGS) -o rshell main.cpp $(OBJS);\
-	if [ ! -d bin ]; then mkdir bin; fi; mv rshell bin
-
-rshell: rshell.h rshell.cpp
-	$(COMPILE) $(FLAGS) -c rshell.cpp
+rshell: main.cpp rshell.h
+	$(COMPILE) $(FLAGS) -o rshell main.cpp rshell.h &&\
+	if [ ! -d bin ]; then mkdir bin; fi && mv rshell bin
 	
 clean: 
 	rm -rf *~ *.o bin
